--- a/DD/Sections/1-Introduction/Scope.tex
+++ b/DD/Sections/1-Introduction/Scope.tex
@@ -1,3 +1,6 @@
-% TODO: change the scope
-
-
+% TODO: check the scope
+Here is a brief review of what has already been said into the RASD document about the SafeStreet scope and functionalities.
+\newline
+SafeStreets is a new service that aims, via the help of citizens, to improve the safety of the streets. Users will have the possibility to send reports of illegal behaviour related to street parking to authorities, just by opening the safe SafeStreets mobile application and take a picture of the violation. Moreover they can also consult the history of their reports and a map that will highlight the most dangerous streets nearby. SafeStreets also offers a way for the authorities to manage the reports and perform analysis on the data. A Web interface will be developed in order to address this purpose. In order to guarantee and efficient use of the application by authorities, the system interacts with an external plate recognition service that will extract the car plate number from the report image. In this way when authorities need to check on a report they immediately find the car plate number of the vehicle that committed the violation. SafeStreets also implements a functionality that performs the interaction with a municipality service that offers data regarding car accidents, if the particular municipality offers one. SafeStreets can cross this information with its owns, in order to get a better idea of the potentially unsafe areas and therefore suggest some possible interventions.
+As for the performances, the service will have to be scalable,
+fast and it must be able to cover a great number of users. While for the applications they must be lightweight and must run of most of the devices available on the market.
