--- a/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
+++ b/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
@@ -10,7 +10,8 @@
   \item API: Application Programming Interface;
   \item HTTP: Hyper Text Transfer Protocol;
   \item GPS: Global Positioning System;
-  \item GDPR: General Data Protection Regulation.
+  \item GDPR: General Data Protection Regulation;
+  \item REST: Representational State Transfer.
 \end{itemize}
 
 \subsection{Abbreviations}
