--- a/DD/Sections/1-Introduction/References.tex
+++ b/DD/Sections/1-Introduction/References.tex
@@ -2,7 +2,7 @@
 %Assignment
 \begin{itemize}
     \item SafeStreets assignment document;
-    \item Previous years RASDs of the Software engineering 2 project;
+    \item Previous years DDs of the Software engineering 2 project;
     \item IEEE Std 830-­‐1998 IEEE Recommended Practice	for	Software Requirements Specifications;	
     \item Slides from the course "Software engineering 2".
 \end{itemize}
