Add overview and network diagrams and minor fixes

--- a/DD/Sections/2-Architectural_Design/Component_view.tex
+++ b/DD/Sections/2-Architectural_Design/Component_view.tex
@@ -25,6 +25,7 @@ Here it is a detailed explanation for each of the components shown in the compon
     \item \textbf{URIManager}: this component is responsible for forwarding the requests coming from the frontend system to the backend subsystem which is able to handle the specific request. This routing is possible thanks to the target URI of the frontend request, that uniquely identify the associated component of the application backend system;
     \item \textbf{NewReportHandler}:this component handles the newly reported violation that are forwarded from the URIManager. The NewReportHandler is responsible for checking the correctness of the new reported data and to delegate the plate recognition to the PlateRecognitionService which is external with respect to the Safestreets system. Once the report has been verified and the plate transctiption has been gathered, the report is forwarded to the QueryManager, specifying an insertion request;
     \item \textbf{PlateRecognitionService}: this component is external from the Safestreets system. It has been created for graphical purposes and it is treated as a black box: given a plate image, it is able to transcribe the license plate and give it back to the NewReportHandler;
+    \item \textbf{ViolationStatusManager}: this component is responsible for changing the statud of the violation reports. This component can only be invoked only if the requesting account is a technician or an LSA;
     \item \textbf{FilteringManager}: this component is responsible for formulating mining operations. The URIManager forwards the mining information to the FilteringManager, which gathers and aggregate all the query parameter and forwards the formally complete query to the QueryManager specifying a select request;
     \item \textbf{SchedulingManager}: this component is responsible for performing the association between technicians and reports. This component can be invoked only if the requesting account is a LSA. After a series of checks, the verified requests is wired into a query and it is forwarded to the QueryManager specifying an insert request;
     \item \textbf{TechnicianRegistrationManager}: this component is responsible for the registration of new technicians into the system. This component can be invoked only if the requesting account is a LSA. The new technicians are directly associated to the requesting LSA. All the needed queries are formulated and forwarded to the QueryManager specifying for each query an insert request;
