minor fix and revision

--- a/DD/Sections/1-Introduction/Purpose.tex
+++ b/DD/Sections/1-Introduction/Purpose.tex
@@ -1,2 +1,2 @@
-The purpose of this Design Document (DD) is to give a rather technical and implementation oriented perspective for the SafeStreets software that is going to be build.
-While the Requirement Analysis and Specification Document (RASD) gives a more conceptual description of the software and a view of the system that is not strictly related to the actual implementation, the DD provides a three hundred and sixty degree guide for the developers that will implement the software in the real world. In fact the DD document contains a practical and detailed description of the architecture that will have to be built; it covers all the aspects of the system that are relevant for the developers. For example the second section is entirely dedicated to the description of the system architecture in all the useful ways (i.e.  component, deployment and runtime view), there is also a section for the design of user interface to be realized as well as a part related to the implementation and testing plan.
+The purpose of this Design Document (DD) is to give a rather technical and implementation oriented perspective for the SafeStreets software that is going to be built.
+While the Requirement Analysis and Specification Document (RASD) gives a more conceptual description of the software and a view of the system that is not strictly related to the actual implementation, the DD provides a three hundred and sixty degrees guide for the developers that will implement the software in the real world. In fact the DD document contains a practical and detailed description of the architecture that will have to be built; it covers all the aspects of the system that are relevant for the developers. For example the second section is entirely dedicated to the description of the system architecture in many useful ways (i.e.  component, deployment and runtime view), there is also a section for the design of user interface to be realized as well as a part related to the implementation and testing plan.
