--- a/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
+++ b/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
@@ -12,6 +12,8 @@
   \item GPS: Global Positioning System;
   \item GDPR: General Data Protection Regulation;
   \item REST: Representational State Transfer.
+  \item URL: Uniform resource location
+  \item URI: Uniform resource indicator
 \end{itemize}
 
 \subsection{Abbreviations}
