add class diagram, selected architectural styles and other decisions

--- a/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
+++ b/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
@@ -12,7 +12,7 @@
   \item GPS: Global Positioning System;
   \item GDPR: General Data Protection Regulation;
   \item REST: Representational State Transfer.
-  \item URL: Uniform resource location
+  \item URL: Uniform resource locator
   \item URI: Uniform resource indicator
 \end{itemize}
 
