Minor fixes to sequence diagrams

--- a/RASD/Sections/1-Introduction/Revision_history.tex
+++ b/RASD/Sections/1-Introduction/Revision_history.tex
@@ -1,6 +1,7 @@
 \begin{itemize}
-    \item Version 1.0:
+    \item Version 1:
         \begin{itemize}
-            \item First release.
+            \item 1.0: First release.
+            \item 1.1: Minor fixes to sequence diagrams
         \end{itemize}
 \end{itemize}
