Add interface diagram and its description. Slightly modify the class diagram and add cloud db and relational db instead of NoSQL db

--- a/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
+++ b/DD/Sections/1-Introduction/Definitions_acronyms_abbreviations.tex
@@ -14,6 +14,11 @@
   \item REST: Representational State Transfer.
   \item URL: Uniform resource locator
   \item URI: Uniform resource indicator
+  \item DB: Database
+  \item DBMS: Database management system
+  \item RDBMS: Relational database management system
+  \item SQL: Structured query language
+  \item NoSQL: Not only SQL
 \end{itemize}
 
 \subsection{Abbreviations}
