--- a/DD/Sections/7-References/References.tex
+++ b/DD/Sections/7-References/References.tex
@@ -5,5 +5,5 @@
     \item DrawIO for some UML diagrams\newline\href{http://draw.io}{http://draw.io}
     \item MVC design pattern wikipedia: \newline\href{https://en.wikipedia.org/wiki/Model-view-controller}{https://en.wikipedia.org/wiki/Model-view-controller}
     \item Multitier architecture wikipedia: \newline\href{https://en.wikipedia.org/wiki/Multitier_architecture}{wikipedia}
-    \item MongoDB geospatial queries: \newline\href{https://docs.mongodb.com/manual/geospatial-queries/}{https://docs.mongodb.com/manual/geospatial-queries/}
+    \item Relational database advantages: \newline\href{https://searchdatamanagement.techtarget.com/definition/relational-database}{https://searchdatamanagement.techtarget.com/definition/relational-database}
 \end{itemize}
