Add description to sequence diagrams

--- a/DD/Sections/2-Architectural_Design/Runtime_view.tex
+++ b/DD/Sections/2-Architectural_Design/Runtime_view.tex
@@ -1,2 +1,17 @@
 \subsection{Send a report}
 \input{Sections/2-Architectural_Design/Sequence_Diagrams/Send_report.tex}
+
+\subsection{Watch MDS}
+\input{Sections/2-Architectural_Design/Sequence_Diagrams/Watch_MDS.tex}
+
+\subsection{Mine information}
+\input{Sections/2-Architectural_Design/Sequence_Diagrams/Mine_information.tex}
+
+\subsection{Schedule PT}
+\input{Sections/2-Architectural_Design/Sequence_Diagrams/Schedule_PT.tex}
+
+\subsection{Watch schedule}
+\input{Sections/2-Architectural_Design/Sequence_Diagrams/Watch_schedule.tex}
+
+\subsection{Ask for suggestions}
+\input{Sections/2-Architectural_Design/Sequence_Diagrams/Ask_suggestions.tex}
