Finish usier interface design

--- a/DD/Sections/3-User_interface_design/User_interface_design.tex
+++ b/DD/Sections/3-User_interface_design/User_interface_design.tex
@@ -1,1 +1,26 @@
+Since the mockups of the mobile application and the web application were already added in the RASD document, here they are presented two flowchart-like diagrams that represent the user navigation flow in both applications. It is implicit that if the users click the back button the apps return to the previous page, as it happens in all common applications.
+
+\vfill
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{Images/UI_Mobile_App.png}
+  \caption{UI diagram of the mobile application}
+  \label{fig:ui_mobile_app}
+\end{figure}
+
+\vfill
+\newpage
+\null
+\vfill
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{Images/UI_Web_App.png}
+  \caption{UI diagram of the web application}
+  \label{fig:ui_web_app}
+\end{figure}
+
+
+\vfill
 \newpage
