--- a/DD/Sections/2-Architectural_Design/Component_view.tex
+++ b/DD/Sections/2-Architectural_Design/Component_view.tex
@@ -23,14 +23,14 @@ Here it is a detailed explanation for each of the components shown in the compon
     \item \textbf{AuthorityWebServer}: this component represents the web server that hosts the web application used by LSAs and technicians. The web server receives all the HTTP requests from the AuthorityWebApp and forwards them to the application backend system. Moreover, the web server notifies the web application when the responses of the previous requests are forwarded from the Notification Service;
     \item \textbf{UserMobileApp}: this component represents the mobile application which users interacts with. When users need to perform a specific function offered by the system, the mobile application automatically forwards it to the application backend system. Moreover, the application is always listening for push notifications coming from the Notification service, for example in case one of the previously reported violation is updated by the technicians;
     \item \textbf{URIManager}: this component is responsible for forwarding the requests coming from the frontend system to the backend subsystem which is able to handle the specific request. This routing is possible thanks to the target URI of the frontend request, that uniquely identify the associated component of the application backend system. Before forwarding the requests to the specific components, the URIManager checks the token that is sent by the frontend application in order to retrieve (and then forward) the account category that performed the request. If the token has expired or it does not exist, the request is automatically rejected and the frontend application is requested for a login operation;
-    \item \textbf{NewReportHandler}:this component handles the newly reported violation that are forwarded from the URIManager. The NewReportHandler is responsible for checking the correctness of the new reported data and to delegate the plate recognition to the PlateRecognitionService which is external with respect to the Safestreets system. Once the report has been verified and the plate transctiption has been gathered, the report is forwarded to the QueryManager, specifying an insertion request;
+    \item \textbf{NewReportHandler}:this component handles the newly reported violation that are forwarded from the URIManager. The NewReportHandler is responsible for checking the correctness of the new reported data and to delegate the plate recognition to the PlateRecognitionService which is external with respect to the Safestreets system. Once the report has been verified and the plate transctiption has been gathered, the report is forwarded to the QueryManager;
     \item \textbf{PlateRecognitionService}: this component is external from the Safestreets system. It has been created for graphical purposes and it is treated as a black box: given a plate image, it is able to transcribe the license plate and give it back to the NewReportHandler;
     \item \textbf{ViolationStatusManager}: this component is responsible for changing the status of the violation reports. This component can only be invoked only if the requesting account is a technician or an LSA;
-    \item \textbf{FilteringManager}: this component is responsible for formulating mining operations. The URIManager forwards the mining information to the FilteringManager, which gathers and aggregate all the query parameter and forwards the formally complete query to the QueryManager specifying a select request;
-    \item \textbf{SchedulingManager}: this component is responsible for performing the association between technicians and reports. This component can be invoked only if the requesting account is a LSA. After a series of checks, the verified requests is wired into a query and it is forwarded to the QueryManager specifying an insert request;
+    \item \textbf{FilteringManager}: this component is responsible for formulating mining operations. The URIManager forwards the mining information to the FilteringManager, which gathers and aggregate all the query parameter and forwards the formally complete query to the QueryManager;
+    \item \textbf{SchedulingManager}: this component is responsible for performing the association between technicians and reports. This component can be invoked only if the requesting account is a LSA or a police technician. It handles both new scheduling requests (LSA) and schedule retrieving requests. After a series of checks, the verified requests is wired into a query and it is forwarded to the QueryManager;
     \item \textbf{TechnicianRegistrationManager}: this component is responsible for the registration of new technicians into the system. This component can be invoked only if the requesting account is a LSA. The new technicians are directly associated to the requesting LSA. All the needed queries are formulated and forwarded to the QueryManager specifying for each query an insert request;
     \item \textbf{LoginManager}: this component is responsible for logging into the system both users and authorities. The request forwarded from the URIManager contains a username and a password: an hash is calculated from the password and the (username, hash) tuple is wired into a select query which will be forwarded to the QueryManager, specifying a login request. Once the login has been approved by the QueryManager, an authentication token is received and backpropagated to the URIManager together with the username;
-    \item \textbf{RegistrationManager}: this component is responsible for registering new users to the system. After a series of checks, the registration request is wired into a query and forwarded to the QueryManager specifying an insert request;
+    \item \textbf{RegistrationManager}: this component is responsible for registering new users to the system. After a series of checks, the registration request is wired into a query and forwarded to the QueryManager;
     \item \textbf{SuggestionGenerationManager}: this component is responsible for generating suggested interventions when an LSA requests it. The URIManager forwards the generic request of suggestion generation and the system automatically performs the following sequence of actions: 
     \begin{itemize}
         \item If not cached, formulate a query on the LSA competence area, asking for the most frequent categories of violations occured in that set of streets;
@@ -44,7 +44,7 @@ Here it is a detailed explanation for each of the components shown in the compon
     \item \textbf{SuggestionNotifier}: this component is responsible for forwarding the suggested interventions set to the LSA account web app through the SendNotificationWebManager;
     \item \textbf{QueryManager}: this component is responsible for interacting with the data layer of the Safestreets system. The QueryManager is able to connect directly with the Cloud DBMS and perform queries on the several databases of the Safestreets system. When this component receives query information, it acts as following: 
     \begin{itemize}
-        \item Perform queries depending on their kinds: 
+        \item Perform queries depending on their kinds, which is inferred from the parameters the component receives: 
         \begin{itemize}
             \item Insert: tries to insert the specified data into the database;
             \item Select: retrieve the filtered data;
